--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-
-<!--
-  vim:filetype=markdown
--->
-
 <html>
   <head>
     <title>ANSI Colour</title>
@@ -291,5 +286,9 @@ The output of `aha -h` give a good example of the results of this method:
              <span style="color:aqua;text-decoration:blink;">http://ziz.delphigl.com/tool_aha.php</span>
     This application is subject to the <span style="color:#3333FF;font-weight:bold;">MPL</span> or <span style="color:#3333FF;font-weight:bold;">LGPL</span>.
 ]
-  </textarea><div id="slideshow" /><div id="overlay" /></body>
+  </textarea><div id="slideshow"></div><div id="overlay"></div></body>
 </html>
+
+<!--
+  vim:filetype=markdown
+-->
