--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -156,10 +156,10 @@ To achieve this, add the following to the end of the remark presentation:
     <script src="terminal.language.js" type="text/javascript"></script>
     <script type="text/javascript">
       var slideshow = remark.create({
-        highlightStyle: 'solarized_dark'
+        highlightStyle: 'monokai'
       });
       // extract the embedded styling from ansi spans
-      $('code.terminal > span.hljs-ansi').replaceWith(function(i, x) {
+      $('code.terminal > div.remark-code-line > span.hljs-ansi').replaceWith(function(i, x) {
         return x.replace(/&lt;(\/?(\w+).*?)&gt;/g, '<$1>')
       });
     </script>
@@ -298,10 +298,10 @@ This application is subject to the <span style="color:#3333FF;font-weight:bold;"
     <script src="terminal.language.js" type="text/javascript"></script>
     <script type="text/javascript">
       var slideshow = remark.create({
-        highlightStyle: 'solarized_dark'
+        highlightStyle: 'monokai'
       });
       // extract the embedded styling from ansi spans
-      $('code.terminal > span.hljs-ansi').replaceWith(function(i, x) {
+      $('code.terminal > div.remark-code-line > span.hljs-ansi').replaceWith(function(i, x) {
         return x.replace(/&lt;(\/?(\w+).*?)&gt;/g, '<$1>')
       });
     </script>
