--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -159,7 +159,7 @@ To achieve this, add the following to the end of the remark presentation:
       });
       // extract the embedded styling from ansi spans
       $('code.terminal span.hljs-ansi').replaceWith(function(i, x) {
-        return x.replace(/&lt;(\/?(\w+).*?)&gt;/g, '<$1>')
+        return x.replace(/&#38;lt;(\/?(\w+).*?)&#38;gt;/g, '<$1>')
       });
     </script>
     ...
