Prevent slide content from overflowing out of viewport

--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -128,7 +128,7 @@ lrwxr-xr-x   1 root wheel       11 Sep 24  2009 <span style="color:aqua;font-wei
 ```
 ]
 
-# Solution
+### Solution
 
 Use the `aha` Ansi HTML Adaptor to capture output and paste the result as code
 to be interpreted by the highlight.js engine used in remark.
@@ -165,6 +165,10 @@ To achieve this, add the following to the end of the remark presentation:
     ...
 ```
 ]
+
+---
+
+# Customization
 
 The terminal language definition assumes a prompt of the form:
 
