--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -154,41 +154,7 @@ the [language definition](terminal.language.js).
 
 ---
 
-# How to Set it Up With JQuery
-
-*This is the JQuery option, the next slide shows installation without JQuery*
-
-1. Download the [language definition](terminal.language.js) and save it in the
-same directory as your remark presentation.
-1. Add the following to the end of the remark presentation:
-
-.small[
-```html
-    ...
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript">
-      var hljs = remark.highlighter.engine;
-    </script>
-    <script src="terminal.language.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      var slideshow = remark.create({
-        highlightStyle: 'monokai'
-      });
-      // extract the embedded styling from ansi spans
-      $('code.terminal span.hljs-ansi').replaceWith(function(i, x) {
-        return x.replace(/&#38;lt;(\/?(\w+).*?)&#38;gt;/g, '<$1>')
-      });
-    </script>
-    ...
-```
-]
-
----
-
-# How to Set it Up Without JQuery
-
-*This is the vanilla JS option, the previous slide shows installation with JQuery*
+# How to Set it Up
 
 1. Download the [language definition](terminal.language.js) and save it in the
 same directory as your remark presentation.
@@ -358,8 +324,10 @@ This application is subject to the <span style="color:#3333FF;font-weight:bold;"
         highlightStyle: 'monokai'
       });
       // extract the embedded styling from ansi spans
-      $('code.terminal span.hljs-ansi').replaceWith(function(i, x) {
-        return x.replace(/&lt;(\/?(\w+).*?)&gt;/g, '<$1>')
+      var highlighted = document.querySelectorAll("code.terminal span.hljs-ansi");
+      Array.prototype.forEach.call(highlighted, function(next) {
+        next.insertAdjacentHTML("beforebegin", next.textContent);
+        next.parentNode.removeChild(next);
       });
     </script>
 
