--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -4,8 +4,8 @@
     <title>ANSI Colour</title>
     <meta charset="utf-8" />
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <script>
       // this code is necessary only for showing source in example
@@ -27,8 +27,8 @@
     </script>
 
     <style>
-      @import url(https://fonts.googleapis.com/css?family=Droid+Serif);
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+      @import url(//fonts.googleapis.com/css?family=Droid+Serif);
+      @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 
       body {
         font-family: 'Droid Serif';
@@ -93,7 +93,7 @@ class: center, middle, inverse
 # in remark
 
 .footnote[
-  created with [remark](http://github.com/gnab/remark)
+  created with [remark](https://github.com/gnab/remark)
 ]
 
 ---
@@ -163,7 +163,7 @@ same directory as your remark presentation.
 .small[
 ```html
     ...
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="//gnab.github.io/remark/downloads/remark-latest.min.js"></script>
     <script type="text/javascript">
       var hljs = remark.highlighter.engine;
     </script>
@@ -239,7 +239,7 @@ Date:   Fri Aug 3 10:29:43 2012 +0200
 ]
 
 Note: code must be in a
-[GFM](http://github.github.com/github-flavored-markdown/) fenced block with
+[GFM](https://github.github.com/github-flavored-markdown/) fenced block with
 "terminal" as the syntax-type as above.
 
 ---
@@ -314,7 +314,7 @@ This application is subject to the <span style="color:#3333FF;font-weight:bold;"
 ]
     </textarea>
 
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="//gnab.github.io/remark/downloads/remark-latest.min.js"></script>
     <script type="text/javascript">
       var hljs = remark.highlighter.engine;
     </script>
