--- a/remark/ansi.html
+++ b/remark/ansi.html
@@ -163,7 +163,7 @@ same directory as your remark presentation.
 .small[
 ```html
     ...
-    <script src="//gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="//remarkjs.com/downloads/remark-latest.min.js"></script>
     <script type="text/javascript">
       var hljs = remark.highlighter.engine;
     </script>
@@ -314,7 +314,7 @@ This application is subject to the <span style="color:#3333FF;font-weight:bold;"
 ]
     </textarea>
 
-    <script src="//gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="//remarkjs.com/downloads/remark-latest.min.js"></script>
     <script type="text/javascript">
       var hljs = remark.highlighter.engine;
     </script>
